Fixed petal alignment within section

--- a/CSS/Hero.css
+++ b/CSS/Hero.css
@@ -19,7 +19,7 @@
 }
 .petals-gold {
   position: absolute;
-  padding-left: 25rem;
+  padding-left: 24rem;
 }
 .petals-pink {
   position: absolute;
